codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_message_only_form.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  字段 1/1                                                                                                              
  Boolean elicit MCP example: do you confirm?                                                                           
  › 1. 允许   允许此请求并继续。                                                                                        
    2. 拒绝    拒绝此请求并继续。                                                                                       
    3. 取消  取消此请求                                                                                                 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter 以提交 | Esc 以取消      
