codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_text_configured_key_chords.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: snapshot
---

  字段 1/1（1 个必填字段未回答）   
  Enter a name

  Name

  › Type your answer

  Ctrl + x Enter 以提交 | Esc 以取消      
